<resources>
    <string name="app_name">hello-android</string>
    <string name="happy_birthday_text">Happy Birthday Midi!</string>
    <string name="signature_text">from Kosm1n</string>
    <string name="button_happy">Wish a Happy</string>
    <string name="button_dice">Roll Dice</string>
    <string name="button_calculator">Tip Calculator</string>
    <string name="dice_roller_button_roll">Roll</string>
    <string name="dice_roller_button_back">Go Back</string>
    <string name="dice_roller_text_view_result">*</string>
    <string name="tip_calculator_button_back">Go Back</string>
    <string name="radio_button_amazing">Amazing (20%)</string>
    <string name="radio_button_good">Good (18%)</string>
    <string name="radio_button_ok">Okay (15%)</string>
    <string name="button_calculate">Calculate</string>
    <string name="switch_round">Round Up Tip</string>
</resources>